--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Deca Job board" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="assets/plugins/css/plugins.css" />
@@ -19,10 +16,11 @@
       id="jssDefault"
       href="assets/css/colors/green-style.css"
     />
-    <title>Job Lens</title>
+    <title>Deca Job</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div className="Loader"></div>
     <div id="root"></div>
     <script
       type="text/javascript"
